--- a/README.asciidoc
+++ b/README.asciidoc
@@ -10,13 +10,13 @@
 * link:Documents/Native/Overview_nativeApp.asciidoc[概要]
 * link:Documents/Native/Guide_nativeApp.asciidoc[導入ガイド]
 
-=== モジュール
+=== モジュール ダウンロード
 [horizontal]
-link:Modules/AMoAdLogger.h[AMoAdLogger.h]::
+link::https://github.com/amoad/amoad-ios-sdk/raw/master/Modules/AMoAdLogger.h[AMoAdLogger.h]::
 ログ出力制御ヘッダ
-link:Modules/AMoAdNativeView.h[AMoAdNativeView.h]::
+link::https://github.com/amoad/amoad-ios-sdk/raw/master/Modules/AMoAdNativeView.h[AMoAdNativeView.h]::
 メインヘッダ
-link:Modules/libAMoAd.a[libAMoAd.a]::
+link::https://github.com/amoad/amoad-ios-sdk/raw/master/Modules/libAMoAd.a[libAMoAd.a]::
 ライブラリ
-link:Modules/libAMoAd_staging.a[libAMoAd_staging.a]::
+link:https://github.com/amoad/amoad-ios-sdk/raw/master/Modules/libAMoAd_staging.a[libAMoAd_staging.a]::
 ライブラリ（ステージング環境用）
