--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,5 +1,11 @@
 = AMoAd SDK for iOS
 
+3.1.0 beta 5::
+画像をメモリキャッシュからファイルキャッシュへ変更しました。
+
+* メモリ使用量が減ります
+* アプリを再起動しても画像のキャッシュが効くようになります
+
 3.1.0 beta 4::
 . リストビュー型のupdateAd、arrayWithSidの挙動が修正されました
 （使い方の詳細はサンプルコードを参照）。
