Native310beta6_supportLinkView
任意のリンクViewを指定できるようになりました。
ドキュメントを追記しました。

--- a/Documents/Native/Guide_listView.asciidoc
+++ b/Documents/Native/Guide_listView.asciidoc
@@ -200,25 +200,31 @@ Interface Builderを使用して、広告レイアウトパターン毎にxibフ
 |共通 |タイトルショート |UILabel |3
 |共通 |タイトルロング |UILabel |4
 |共通 |サービス名 |UILabel |5
+|共通 |リンク |UIButton、UIImageView、UILabelなど、
+UIViewのサブクラス |6
 |===
 
 ===== レイアウト作成サンプル（アイコン画像＋テキスト）
 
-クラスはUITableViewCellのままで良い
+.クラスはUITableViewCellのままで良い
 image:https://qiita-image-store.s3.amazonaws.com/1726/4107/81dcb936-6569-7925-c63b-e4b091e83cd8.png[
 "レイアウトサンプル01", width="80%"]
 
-アイコン画像のタグには _1_ を設定する
+.アイコン画像のタグには _1_ を設定する
 image:https://qiita-image-store.s3.amazonaws.com/1726/4107/1a91b05b-5673-8442-62a6-1ffa2e3aa606.png[
 "レイアウトサンプル02", width="80%"]
 
-タイトルロングのタグには _4_ を設定する
+.タイトルロングのタグには _4_ を設定する
 image:https://qiita-image-store.s3.amazonaws.com/1726/4107/edfe7cc6-9cb7-adcc-2816-a080bb0b743f.png[
 "レイアウトサンプル03", width="80%"]
 
-サービス名のタグには _5_ を設定する
+.サービス名のタグには _5_ を設定する
 image:https://qiita-image-store.s3.amazonaws.com/1726/4107/55e0d980-ff12-2134-4ff0-686b4d756194.png[
 "レイアウトサンプル04", width="80%"]
+
+.リンクのタグには _6_ を設定する
+image:images/n-link.png[
+"Interface Builder", width=320]
 
 ==== UITableViewDataSourceの実装時における注意事項
 
