--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,5 +1,15 @@
 = AMoAd SDK for iOS
 
+3.1.0 beta 6::
+任意のリンクViewを設定できるようになりました。
+
+UIButton、UIImageView、UILabelなど、
+UIViewのサブクラスのタグ番号に「6」を設定してください。
+
+.Interface Builder
+image:Documents/Native/images/n-link.png[
+"Interface Builder", width=320]
+
 3.1.0 beta 5::
 画像をメモリキャッシュからファイルキャッシュへ変更しました。
 
