--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,5 +1,12 @@
 = AMoAd SDK for iOS
 
+3.2.0::
+. App Storeのモーダルウィンドウ遷移に対応しました。
+.. 近日中に対応する広告が配信される予定です
+.. 管理画面での設定が必要です。
+.. StoreKitをリンクしてください。
+. 画像キャッシュのメモリ使用量を改善しました。
+
 3.1.0 beta 7::
 文字列に属性を設定できるようになりました。
 
