--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,7 +1,11 @@
 = AMoAd SDK for iOS
 
+3.2.2::
+* App Storeのモーダルウィンドウ遷移機能において、
+UIViewControllerが入れ子になっている場合に対応しました。
+
 3.2.1::
-. 画像キャッシュの速度を改善しました。
+* 画像キャッシュの速度を改善しました。
 
 3.2.0::
 . App Storeのモーダルウィンドウ遷移に対応しました。
