--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,5 +1,9 @@
 = AMoAd SDK for iOS
 
+3.2.5+::
+* サンプルアプリの「Other Linker Flags」に「-ObjC」を設定しました。 + 
+（SDKを使用する場合、この設定は必須です）
+
 3.2.5::
 * 画像キャッシュ機能の高速化を行いました。
 
