--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,7 +1,10 @@
 = AMoAd SDK for iOS
 
+3.2.10::
+* 3.2.9のBug-Fixを行いました。
+
 3.2.9::
-* 広告情報（テキスト）のキャッシュ性能が向上しました。
+* 広告情報（テキスト）のキャッシュ性能が向上しました。（=> 3.2.10 Bug-Fix）
 
 3.2.8::
 * 広告表示性能の改善を行いました。
