--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,16 +1,13 @@
 = AMoAd SDK for iOS
 
-3.4.0::
+3.5.0::
 * リストビューの表示間隔が不正になることがあったのを修正しました。
 
 3.3.0::
 * 広告読込キャッシュのパフォーマンス改善を行いました。
 
 3.2.10::
-* 3.2.9のBug-Fixを行いました。
-
-3.2.9::
-* 広告情報（テキスト）のキャッシュ性能が向上しました。（=> 3.2.10 Bug-Fix）
+* 広告情報（テキスト）のキャッシュ性能が向上しました。
 
 3.2.8::
 * 広告表示性能の改善を行いました。
