--- a/Documents/Native/Guide_listView.asciidoc
+++ b/Documents/Native/Guide_listView.asciidoc
@@ -1,10 +1,23 @@
 :Version: 3.2.8
+:toc: macro
+:toc-title: 目次
+:toclevels: 4
 
-== AMoAdネイティブ広告 SDK {version} Guide for iOS - listView
+= AMoAdネイティブ広告 SDK {version} Guide for iOS - listView
 
-=== 対応環境
+toc::[]
 
-==== デバイス
+:numbered!:
+:sectnums!:
+
+== 　
+
+:numbered:
+:sectnums:
+
+== 対応環境
+
+=== デバイス
 以下の環境がサポート対象です。
 
 |===
@@ -13,16 +26,16 @@
 |iPad |iPad、iPad2、iPad(第3世代以降)、iPad mini、iPad Air、iPad mini Retina
 |===
 
-==== OSバージョン
+=== OSバージョン
 iOS 6.0以上がサポート対象です。
 
-==== 開発環境
+=== 開発環境
 
 Xcode 5.X以降が必要です。
 
-=== 組み込み手順
+== 組み込み手順
 
-==== プロジェクトへのSDK追加
+=== プロジェクトへのSDK追加
 Xcode 上で対象プロジェクトに
 __libAMoAd.a__と
 __AMoAdNativeView.h__をドラッグ&ドロップします。
@@ -38,7 +51,7 @@ SDKの追加は完了です。
 image:https://qiita-image-store.s3.amazonaws.com/1726/4107/ff7eaaf3-c3e2-5453-47d4-1e39a36c0361.png[
 "完了", width="100%"]
 
-==== 必須フレームワークの追加￼
+=== 必須フレームワークの追加￼
 本SDKでは下記のフレームワークの追加が必要です。
 
 |===
@@ -58,26 +71,26 @@ image:https://qiita-image-store.s3.amazonaws.com/1726/4107/f3800a0e-1ba5-21b6-2e
 
 上記のようにImageIO.framework、AdSupport.framework、libAMoAd.a（SDKの追加時に説明済み）が追加されていれば完了です。
 
-==== リンクオプションの追加
+=== リンクオプションの追加
 
 ターゲットの Build Settings タブを開き、
 Linking カテゴリの Other Linker Flags に「-ObjC」 を設定してください。
 
-=== 導入に必要な実装手順（UITableView）
+== 導入に必要な実装手順（UITableView）
 
-==== ViewControllerへの実装について
+=== ViewControllerへの実装について
 この説明内における下記ファイルは、UITableViewを表示する対象のUIViewControllerを指しています。
 （このUIViewControllerにてUITableViewDataSource、UITableViewDelegateプロトコルを実装している想定）
 
 * `SampleTableViewController.h（SampleCollectionViewController.h）`
 * `SampleTableViewController.m（SampleCollectionViewController.m）`
 
-==== importが必要なヘッダーファイル
+=== importが必要なヘッダーファイル
 必要なヘッダーファイルは下記のみです。
 
 * `AMoAdNativeView.h`
 
-==== 広告準備および事前取得（prepareAdWithSid）
+=== 広告準備および事前取得（prepareAdWithSid）
 この処理を実行する事により、SID毎に必要な広告の事前取得および、広告表示位置のデフォルト設定を行う。
 （上記デフォルト値は、サーバに初回アクセス時まで有効、初回アクセス以降は管理画面上で設定した広告表示位置が基準値となる）
 
@@ -117,7 +130,7 @@ _prepareAdWithSid:defaultBeginIndex:defaultInterval:iconPreloading:imagePreloadi
 |imagePreloading |メイン画像＋テキスト |メイン画像の読み込み処理タイミングについて。YES：広告取得時に読み込み処理を実施する。NO（デフォルト値）：広告表示時に読み込み処理を実施
 |===
 
-==== 広告準備および事前取得（registerTableView）
+=== 広告準備および事前取得（registerTableView）
 sid(およびtag)毎にUITableViewとnibNameを管理、広告用セルの登録を実施
 
 .SampleTableViewController.m
@@ -142,7 +155,7 @@ sid(およびtag)毎にUITableViewとnibNameを管理、広告用セルの登録
 |nibName |広告用のレイアウトを記述したxibファイルの名称
 |===
 
-==== 広告を含んだデータソース元となる配列を作成（arrayWithSid）
+=== 広告を含んだデータソース元となる配列を作成（arrayWithSid）
 広告を含んだデータソース元となる配列を作成し、この配列をベースにUITableViewDataSourceの実装に対応する。
 なお、リスト表示更新時の注意事項については、別項を参照のこと。
 
@@ -180,7 +193,7 @@ __注意）初回時にarrayWithSidで広告を含んだ配列を生成する前
 |updateAd |YES:広告の更新が必要。NO:広告の更新が不要
 |===
 
-==== 広告用のレイアウトファイル作成
+=== 広告用のレイアウトファイル作成
 
 Interface Builderを使用して、広告レイアウトパターン毎にxibファイルを作成する。
 
@@ -189,7 +202,7 @@ Interface Builderを使用して、広告レイアウトパターン毎にxibフ
 * アイコン画像＋テキスト
 * メイン画像＋テキスト
 
-===== 各パターン毎に必要なレイアウトを作成する
+==== 各パターン毎に必要なレイアウトを作成する
 下記表を参考にレイアウトを作成する
 
 |===
@@ -203,7 +216,7 @@ Interface Builderを使用して、広告レイアウトパターン毎にxibフ
 UIViewのサブクラス |6
 |===
 
-===== レイアウト作成サンプル（アイコン画像＋テキスト）
+==== レイアウト作成サンプル（アイコン画像＋テキスト）
 
 .クラスはUITableViewCellのままで良い
 image:https://qiita-image-store.s3.amazonaws.com/1726/4107/81dcb936-6569-7925-c63b-e4b091e83cd8.png[
@@ -225,7 +238,7 @@ image:https://qiita-image-store.s3.amazonaws.com/1726/4107/55e0d980-ff12-2134-4f
 image:images/n-link.png[
 "Interface Builder", width=320]
 
-==== UITableViewDataSourceの実装時における注意事項
+=== UITableViewDataSourceの実装時における注意事項
 
 __tableView:numberOfRowsInSection:__
 広告を含んだデータソース元となる配列のカウントを使用すれば良い。
@@ -269,7 +282,7 @@ __tableView:cellForRowAtIndexPath:__
 }
 ----
 
-==== (任意) リスト表示を更新する際の注意
+=== (任意) リスト表示を更新する際の注意
 ユーザデータのプルリフレッシュ（pull to refresh）、
 追加読み込み（load more）時にUITableView#reloadDataを実行する前に必ず、
 `arrayWithSid:tag:originalArray:updateAd:`を呼び、
@@ -334,7 +347,7 @@ originalArrayとして渡す場合
 }
 ----
 
-====  (その他) セルごとの高さ設定
+===  (その他) セルごとの高さ設定
 既存コンテンツのセルと広告セルの高さが異なる場合のサンプル
 (UITableViewDelegateを実装している場合)
 
@@ -356,7 +369,7 @@ originalArrayとして渡す場合
 }
 ----
 
-==== 広告のタップ回数を設定する
+=== 広告のタップ回数を設定する
 
 広告のタップ回数（ダブルクリックの場合は「2」）を指定できます。
 
@@ -373,7 +386,7 @@ coder.numberOfTapsRequired = 2; // タップ回数を指定する
 ];
 ----
 
-==== 文字列に属性を設定する
+=== 文字列に属性を設定する
 
 AMoAdNativeViewCoderを生成し、サービス名、テキストショート、テキストロングの
 各プロパティにNSDictionaryオブジェクトでNSAttributedStringに設定する
@@ -408,12 +421,12 @@ coder.titleLongAttributes = @{ NSForegroundColorAttributeName : [UIColor redColo
 ];
 ----
 
-=== 導入に必要な実装手順（UICollectionView）
+== 導入に必要な実装手順（UICollectionView）
 現在、作成中です。
 
-=== その他の実装について
+== その他の実装について
 
-==== ログ出力方法
+=== ログ出力方法
 
 開発時にSDKのログを出力をしたい場合は、
 `AMoAdLogger.h` をimportした上で下記実装を実施する。
@@ -430,7 +443,7 @@ coder.titleLongAttributes = @{ NSForegroundColorAttributeName : [UIColor redColo
 }
 ----
 
-==== トレース出力方法
+=== トレース出力方法
 
 開発時にSDKのトレースを出力をしたい場合は、
 `AMoAdLogger.h` をimportした上で下記実装を実施する。
