--- a/README.asciidoc
+++ b/README.asciidoc
@@ -59,3 +59,7 @@ link:https://github.com/amoad/amoad-ios-sdk/tree/master/Samples/Native[サンプ
 * link:Documents/UnityPlugin/Guide.asciidoc[導入ガイド]
 * https://github.com/amoad/amoad-ios-sdk/raw/master/UnityPlugin/AMoAdUnityPlugin.unitypackage[パッケージのダウンロード]
 * link:https://github.com/amoad/amoad-ios-sdk/blob/master/Samples/UnityPlugin[サンプルコード]
+
+=== AdMobメディエーション アダプタ
+* link:Documents/AdMobMediation/AdMobSetup.asciidoc[導入ガイド]
+* https://github.com/amoad/amoad-ios-sdk/raw/master/AdMobMediation/libAMoAdGmAdapter.a[アダプタのダウンロード]
