--- a/Documents/UnityPlugin/Guide.asciidoc
+++ b/Documents/UnityPlugin/Guide.asciidoc
@@ -180,30 +180,32 @@ public class AMoAdUnityPluginSample : MonoBehaviour {
 .3+|adjustMode .3+|AMoAdUnityPlugin .AdjustMode 2+|広告サイズの調整
 |Fixed |固定
 |Responsive |レスポンシブ（デフォルト）
-.6+|rotateTrans .6+|AMoAdUnityPlugin .RotateTransition 2+|広告ローテーション時のトランジションを設定する
+.6+|rotateTrans .6+|AMoAdUnityPlugin .RotateTransition 2+|広告ローテーション時のトランジションを設定する（iOS用）
 |None |トランジション「なし」（デフォルト）
 |CurlUp |トランジション「巻き上げ」
 |CurlDown |トランジション「巻き下げ」
 |FlipFromLeft |トランジション「左フリップ」
 |FlipFromRight |トランジション「右フリップ」
-.3+|clickTrans .3+|AMoAdUnityPlugin .ClickTransition 2+|広告クリック時のトランジションを設定する
+.3+|clickTrans .3+|AMoAdUnityPlugin .ClickTransition 2+|広告クリック時のトランジションを設定する（iOS用）
 |None |トランジション「なし」（デフォルト）
 |Jump |トランジション「ジャンプ」
 |imageName |string 2+|初期表示画像ファイル名（Androidアプリを作成する場合は、アルファベットの小文字で始まる名前）
 |x |int 2+|x座標（hAlignがNoneのときのみ有効）
 |y |int 2+|y座標（vAlignがNoneのときのみ有効）
-.6+|androidRotateTrans .6+|AMoAdUnityPlugin .AndroidRotateTransition 2+|広告ローテーション時のトランジションを設定する
+.6+|androidRotateTrans .6+|AMoAdUnityPlugin .AndroidRotateTransition 2+|広告ローテーション時のトランジションを設定する（Android用）
 |None |トランジション「なし」（デフォルト）
 |Alpha |トランジション「透過」
 |Rotate |トランジション「回転」
 |Scale |トランジション「拡大」
 |Translate |トランジション「スライド・アップ」
-.3+|androidClickTrans .3+|AMoAdUnityPlugin .AndroidClickTransition 2+|広告クリック時のトランジションを設定する
+.3+|androidClickTrans .3+|AMoAdUnityPlugin .AndroidClickTransition 2+|広告クリック時のトランジションを設定する（Android用）
 |None |トランジション「なし」（デフォルト）
 |Jump |トランジション「ジャンプ」
 |===
 
 TIP: 広告サイズの調整にレスポンシブを選択すると、端末のサイズに合わせて広告が拡大縮小します。iPhone 5以前の横幅（320）を基準とします。
+
+TIP: rotateTransとclickTransに関して、Androidアプリをビルドする場合は、対応しているアニメーションが異なりますので、代わりにandroidRotateTrans、androidClickTransをご使用ください。
 
 ==== AMoAdUnityPlugin.Show()
 sidを指定して広告の表示を行います。
